--- a/src/js/components/Main/main.scss
+++ b/src/js/components/Main/main.scss
@@ -1,6 +1,21 @@
-.Main {
-	margin: 30px;
-	border-radius: 32px;
-	box-shadow: 0 0 16px rgba(0,0,0,.5);
-	transition: all 0.3s ease-in-out;
+Main {
+	margin: 30px；
+}
+
+
+.loading{
+	flex: 1 1 100px;
+	font-size: 100px;
+	//padding: 80px 80px;
+	width: 700px;
+	height: 100px;
+}
+
+@media screen and (max-width: 1024px) {
+	.Weather {
+		width: 50%;
+		min-width: 350px;
+		margin-top: 50px;
+	}
+
 }
